# sandsmp

./: .gitignore  AGENTS.md  ARCH.md  Cargo.toml  WATER.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
app/: error.tsx  globals.css  layout.tsx  page.tsx
app/_components/: SimulationCanvas.tsx  SimulationLoader.tsx  WasmTest.tsx
app/_lib/: input.test.ts  input.ts  renderer.ts  stamps.ts  useTheme.ts
app/_lib/shaders/: grid.wgsl
app/_lib/wasm/: loadSimulation.ts
crates/simulation/: Cargo.toml
crates/simulation/benches/: tick_perf.rs
crates/simulation/proptest-regressions/elements/: mod.txt
crates/simulation/src/: api.rs  cell.rs  lib.rs
crates/simulation/src/elements/: fire.rs  ghost.rs  mod.rs  sand.rs  smoke.rs  water.rs  water_level_test.rs
docs/: RUST.md
docs/elements/: ADVANCED.md
e2e/: fps.spec.ts  simulation.spec.ts
public/: simulation.js  simulation_bg.wasm
