[package]
name = "simulation"
version = "0.1.0"
edition = "2021"
description = "Falling sand simulation engine compiled to WASM"
repository = "https://github.com/pranavosu/sandsmp"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
proptest = "1"

[[bench]]
name = "tick_perf"
harness = false

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[lints.rust]
missing_debug_implementations = "warn"
redundant_imports = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"

[lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
